//////////////////////////////////////
// CRM AI Loyalty System - DBML Schema
// Matches actual Prisma schema (prisma/schema.prisma)
//////////////////////////////////////

// ─── Enums ────────────────────────────────────────────────────────────────────

// Role:             ADMIN | STAFF | MARKETING
// Tier:             BRONZE | SILVER | GOLD | PLATINUM
// TransactionType:  EARN | REDEEM | EXPIRE | ADJUST
// RedemptionStatus: PENDING | COMPLETED | CANCELLED
// CampaignType:     POINTS_MULTIPLIER | BONUS_POINTS | DISCOUNT | FREE_REWARD
// ActivityType:     PROFILE_UPDATED | POINTS_EARNED | POINTS_REDEEMED | REWARD_REDEEMED | CAMPAIGN_JOINED | TIER_UPGRADED
// InsightType:      CUSTOMER_SEGMENT | CHURN_RISK | PROMOTION_RECOMMENDATION | BEHAVIOR_ANALYSIS | GENERAL

// ─── Tables ───────────────────────────────────────────────────────────────────

Table users {
  id        varchar [pk, note: 'cuid']
  email     varchar [unique]
  password  varchar
  name      varchar
  role      varchar [note: 'ADMIN | STAFF | MARKETING', default: 'STAFF']
  isActive  boolean [default: true]
  createdAt timestamp
  updatedAt timestamp
}

Table customers {
  id          varchar [pk, note: 'cuid']
  firstName   varchar
  lastName    varchar
  email       varchar [unique]
  phone       varchar [null]
  dateOfBirth timestamp [null]
  tier        varchar [note: 'BRONZE | SILVER | GOLD | PLATINUM', default: 'BRONZE']
  isActive    boolean [default: true]
  createdAt   timestamp
  updatedAt   timestamp
}

Table loyalty_accounts {
  id             varchar [pk, note: 'cuid']
  customerId     varchar [unique, ref: > customers.id]
  totalPoints    int [default: 0]
  lifetimePoints int [default: 0]
  createdAt      timestamp
  updatedAt      timestamp
}

Table loyalty_transactions {
  id               varchar [pk, note: 'cuid']
  loyaltyAccountId varchar [ref: > loyalty_accounts.id]
  type             varchar [note: 'EARN | REDEEM | EXPIRE | ADJUST']
  points           int
  description      varchar
  referenceId      varchar [null]
  createdAt        timestamp
}

Table rewards {
  id          varchar [pk, note: 'cuid']
  name        varchar
  description varchar [null]
  pointsCost  int
  stock       int [null]
  isActive    boolean [default: true]
  expiresAt   timestamp [null]
  createdAt   timestamp
  updatedAt   timestamp
}

Table reward_redemptions {
  id         varchar [pk, note: 'cuid']
  customerId varchar [ref: > customers.id]
  rewardId   varchar [ref: > rewards.id]
  pointsUsed int
  status     varchar [note: 'PENDING | COMPLETED | CANCELLED', default: 'PENDING']
  createdAt  timestamp
  updatedAt  timestamp
}

Table campaigns {
  id               varchar [pk, note: 'cuid']
  name             varchar
  description      varchar [null]
  type             varchar [note: 'POINTS_MULTIPLIER | BONUS_POINTS | DISCOUNT | FREE_REWARD']
  pointsMultiplier float [null, default: 1]
  bonusPoints      int [null]
  startDate        timestamp
  endDate          timestamp
  isActive         boolean [default: true]
  createdAt        timestamp
  updatedAt        timestamp
}

Table customer_activities {
  id          varchar [pk, note: 'cuid']
  customerId  varchar [ref: > customers.id]
  type        varchar [note: 'PROFILE_UPDATED | POINTS_EARNED | POINTS_REDEEMED | REWARD_REDEEMED | CAMPAIGN_JOINED | TIER_UPGRADED']
  description varchar
  metadata    json [null]
  createdAt   timestamp
}

Table ai_insights {
  id         varchar [pk, note: 'cuid']
  customerId varchar [null, ref: > customers.id]
  type       varchar [note: 'CUSTOMER_SEGMENT | CHURN_RISK | PROMOTION_RECOMMENDATION | BEHAVIOR_ANALYSIS | GENERAL']
  content    text
  metadata   json [null]
  createdAt  timestamp
}

// ─── Relationships ────────────────────────────────────────────────────────────

// One-to-One
Ref: loyalty_accounts.customerId - customers.id   // each customer has one loyalty account

// One-to-Many
Ref: loyalty_transactions.loyaltyAccountId > loyalty_accounts.id   // account has many transactions
Ref: reward_redemptions.customerId > customers.id                   // customer has many redemptions
Ref: reward_redemptions.rewardId > rewards.id                       // reward has many redemptions
Ref: customer_activities.customerId > customers.id                  // customer has many activities
Ref: ai_insights.customerId > customers.id                          // customer has many AI insights (optional)
